Make parsing out of a string just parse out of the string instead of wrapping it in a stream.  Bug 314920, patch by Alfred Kayser <alfredkayser@nl.ibm.com>, r=dbaron, sr=bzbarsky