layout/style/nsCSSScanner.h
@@ -46,6 +46,8 @@ class nsIUnicharInputStream;
 // XXX turn this off for minimo builds
 #define CSS_REPORT_PARSE_ERRORS
 
+#define CSS_BUFFER_SIZE 256
+
 // for #ifdef CSS_REPORT_PARSE_ERRORS
 #include "nsXPIDLString.h"
 class nsIURI;
@@ -132,7 +134,10 @@ class nsCSSScanner {
   // Init the scanner.
   // |aLineNumber == 1| is the beginning of a file, use |aLineNumber == 0|
   // when the line number is unknown.
-  void Init(nsIUnicharInputStream* aInput, nsIURI* aURI, PRUint32 aLineNumber);
+  // Either aInput or (aBuffer and aCount) must be set.
+  void Init(nsIUnicharInputStream* aInput, 
+            const PRUnichar *aBuffer, PRInt32 aCount, 
+            nsIURI* aURI, PRUint32 aLineNumber);
   void Close();
 
   static PRBool InitGlobals();
@@ -213,8 +218,11 @@ protected:
 
   PRBool GatherIdent(nsresult& aErrorCode, PRInt32 aChar, nsString& aIdent);
 
-  nsCOMPtr<nsIUnicharInputStream> mInput;
-  PRUnichar* mBuffer;
+  // Only used when input is a stream
+  nsCOMPtr<nsIUnicharInputStream> mInputStream;
+  PRUnichar mBuffer[CSS_BUFFER_SIZE];
+
+  const PRUnichar *mReadPointer;
   PRInt32 mOffset;
   PRInt32 mCount;
   PRUnichar* mPushback;
